--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "bumbummen99/shoppingcart": "^2.8",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
+        "laravel/ui": "1.0",
+        "propaganistas/laravel-phone": "^4.2",
+        "stripe/stripe-php": "^7.27",
         "tcg/voyager": "^1.3"
     },
     "require-dev": {
