--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -31,9 +31,9 @@ jobs:
         DB_DATABASE: database/database.sqlite
       run: vendor/bin/phpunit
     - name: SCP files
-      uses: horochx/deploy-via-scp@master
+      uses: sudheergajula-rubrik/deploy-via-scp@master
       with:
-        local: localPath # eg: dist
+        local: "./*" # eg: dist
         remote: ${{ secrets.REMOTE }} # eg: /home/github-action
         host: ${{ secrets.HOST }} # eg: example.com
         port: ${{ secrets.PORT }} # eg: 22
