--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -33,7 +33,7 @@ jobs:
     - name: SCP files
       uses: sudheergajula-rubrik/deploy-via-scp@master
       with:
-        local: "./*" # eg: dist
+        local: "./*"
         remote: ${{ secrets.REMOTE }} # eg: /home/github-action
         host: ${{ secrets.HOST }} # eg: example.com
         port: ${{ secrets.PORT }} # eg: 22
