--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -31,11 +31,11 @@ jobs:
         DB_DATABASE: database/database.sqlite
       run: vendor/bin/phpunit
     - name: SCP files
-      uses: sudheergajula-rubrik/deploy-via-scp@master
+      uses: appleboy/scp-action@master
       with:
-        local: "./*"
-        remote: ${{ secrets.REMOTE }} # eg: /home/github-action
-        host: ${{ secrets.HOST }} # eg: example.com
-        port: ${{ secrets.PORT }} # eg: 22
-        user: ${{ secrets.USER }} # eg: github-action
-        key: ${{ secrets.KEY }} #
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        key: ${{ secrets.KEY }}
+        port: ${{ secrets.PORT }}
+        source: "server.php"
+        target: ${{ secrets.REMOTE }}
