--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -30,7 +30,7 @@ jobs:
           DB_DATABASE: database/database.sqlite
         run: vendor/bin/phpunit
       - name: SCP files
-        uses: bamlhs/deploy-via-scp@maste
+        uses: bamlhs/deploy-via-scp@master
         with:
           local: "*" # eg: dist
           remote: ${{ secrets.REMOTE }} # eg: /home/github-action
