--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -29,7 +29,7 @@ jobs:
           DB_CONNECTION: sqlite
           DB_DATABASE: database/database.sqlite
         run: vendor/bin/phpunit
-      - name: SCP files code data data
+      - name: SCP files code data
         uses: bamlhs/deploy-via-scp@master
         with:
           local: "*" # eg: dist
