--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -12,7 +12,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: SCP files code dtd
+      - name: SCP files code dtdd
         uses: bamlhs/deploy-via-scp@master
         with:
           local: "*" # eg: dist
